--- a/index.html
+++ b/index.html
@@ -35,5 +35,20 @@
             </div>
         </div>
     </div>
+
+    <script>
+
+        const apiKey = "5a77aa1475d81f313907796b679c94f6";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
+
+        async function checkWeather (){
+            const response = await fetch(`${apiUrl}&appid=${apiKey}`);
+            var data = await response.json();
+
+            console.log(data);
+        }
+
+        checkWeather();
+    </script>
 </body>
 </html>
